--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href="index.html">00 Home</a>
         </li>
         <li>
-          <a href="destination.html">01 Destination</a>
+          <a href="destination-moon.html">01 Destination</a>
         </li>
         <li>
           <a href="crew.html">02 Crew</a>
@@ -53,7 +53,7 @@
       </ul>
     </nav>   
   </header>
-
+              
   <main>
     <section class="content-section">
       <div class="about-space__container">
