added desktop design

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   </header>
               
   <main>
-    <section class="content-section">
-      <div class="about-space__container">
+    <div class="contents">
+      <section class="about-space__container">
         <div class="about-space__titles">
           <div class="title-intro">
             <h5>So, you want to travel to</h5>
@@ -66,16 +66,16 @@
         </div>
         
 
-        <div class="explore-text">
+        <article class="explore-text">
           <p>Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
-        </div>
-      </div>
+        </article>
+      </section>
 
       <!-- <div class="explore-container"> -->
       <div class="explore-link-div">
         <a href="destination.html" class="explore">Explore</a>
       </div>
-    </section>
+    </div>
   </main>
 
   <script src="script.js"></script>
