added styles to crew and technology pages

--- a/destination-mars.html
+++ b/destination-mars.html
@@ -71,10 +71,10 @@
       
       <section class="section2">
         <div class="planet-menu">
-          <a href="destination-moon.html">Moon</a>
-          <a href="destination-mars.html">Mars</a>
-          <a href="destination-europa.html">Europa</a>
-          <a href="destination-titan.html">Titan</a>
+          <a href="destination-moon.html" class="active planet-link">Moon</a>
+          <a href="destination-mars.html" class="planet-link">Mars</a>
+          <a href="destination-europa.html" class="planet-link">Europa</a>
+          <a href="destination-titan.html" class="planet-link">Titan</a>
         </div>
   
         <h1 class="title-mars">Mars</h1>
