added image sliders

--- a/technology.html
+++ b/technology.html
@@ -17,9 +17,9 @@
 <body>
   <main>
     <section class="technology-section">
-      <div class="page-title-div">
-        <h5 class="page-title">
-          <span class="page-title-number">03</span>
+      <div class="tech-page-title_container">
+        <h5 class="tech-page-title">
+          <span class="tech-page-title_number">03</span>
           Space Launch 101
         </h5>
       </div>
@@ -30,10 +30,10 @@
         </div>
   
         <div class="technology-contents">
-          <div class="technology-btns_container">
-            <button class="btn active-technology">1</button>
-            <button class="btn">2</button>
-            <button class="btn">3</button>
+          <div class="tech-btns_container">
+            <button class="tech-btn active-technology">1</button>
+            <button class="tech-btn">2</button>
+            <button class="tech-btn">3</button>
           </div>
     
           <div class="technology-text_container">
@@ -51,24 +51,6 @@
     </section>
   </main>
 
-<!-- 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  03 Space launch 101
-
-  1
-  2
-  3
-
-  The terminology...
-  Launch vehicle
-
-  A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-  payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-  WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
-  it's quite an awe-inspiring sight on the launch pad! -->
+  <script src="script.js"></script>
 </body>
 </html>
